<resources>
    <string name="default_notification_channel_id">Channel ID</string>
    <string name="colorpicker_dialog_title">Choose the color</string>
    <string name="colorpicker_dialog_cancel">Cancel</string>
    <string name="colorpicker_dialog_ok">OK</string>
    <string name="please_wait_dialog_default_title">Please wait</string>
    <string name="please_wait_dialog_default_message">Loading...</string>
    <string name="dialog_maintenance">Sorry..The application is under maintenance, Please try again later</string>
    <string name="dialog_msg_update_app_version">The new version is available in Play Store, please update your application</string>
    <string name="dialog_msg_update_app">Please update your Application</string>
    <string name="cover_song">Cover\nSong</string>
    <string name="record">Record</string>
    <string name="text_continue">Continue</string>
    <string name="record_started">Recorded Started</string>
    <string name="record_paused">Recorded Paused</string>
    <string name="record_resumed">Recorded Resumed</string>
    <string name="record_saved">Successfully saved the recording</string>
    <string name="record_canceled">The recording has been cancelled</string>
    <string name="no_internet_connection">No Internet Connection, Try again</string>
    <string name="device_not_support">Your device not support to record audio</string>
    <string name="allow_permission">Allow Permission Audio In Setting</string>
    <string name="choose_language">Choose Language</string>
    <string name="indonesia">Indonesia</string>
    <string name="choose">Choose</string>
    <string name="save">Save</string>
    <string name="information">Information</string>
    <string name="update">Update</string>
    <string name="no">No</string>
    <string name="setting">Setting</string>
    <string name="language">Language</string>
    <string name="rate_us">Rate Us</string>
    <string name="help_suggest">Help and Suggest</string>
    <string name="share_with_friends">Share with Friends</string>
    <string name="choose_one">Choose One</string>
    <string name="text_video">Video</string>
    <string name="please_wait">Please Wait</string>
    <string name="loading_audio">Process Loading Audio....</string>
    <string name="title">Title</string>
    <string name="write_note_here">Write Note Here</string>
    <string name="search_record">Search Recorded </string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="recordings">Recordings</string>
    <string name="saved_recording_ask">Save Recording ?</string>
    <string name="exit">Exit</string>
    <string name="send">Send</string>
    <string name="input_message_here">Input Message Here</string>
    <string name="message_cannot_empty">Message Cannot Empty</string>
    <string name="more_apps">More Apps</string>
    <string name="use_note">Use Note</string>
    <string name="edit_note">Edit Note</string>
    <string name="delete_not">Delete Note</string>
    <string name="default_language">Default Language</string>
    <string name="background_color">Background Color</string>
    <string name="song_volume">Song Volume</string>
    <string name="note">Note</string>
    <string name="indonesian">Indonesian</string>
    <string name="english">English</string>
    <string name="filipino">Filipino</string>
    <string name="japanese">Japanese</string>
    <string name="korean">Korean</string>
    <string name="vietnamese">Vietnamese</string>
    <string name="thai">Thai</string>
    <string name="Portuguese">Portuguese</string>
    <string name="dutch">Dutch</string>
    <string name="malay">Malay</string>
    <string name="spanish">Spanish</string>
    <string name="arabic">Arabic</string>
    <string name="download_success">Download Successful, Please Wait 5 Seconds</string>
    <string name="data_empty">Data Empty</string>
    <string name="yes">Yes</string>
    <string name="title_recording_dialog">The recording process will start after you select YES</string>
    <string name="title_recording_canceled">Do you want to cancel the recording?</string>
    <string name="title_recording_stop">Do you want to save the recording?</string>
    <string name="notification">Notification</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="stop">Stop</string>
    <string name="pause">Pause</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="play">Play</string>
    <string name="previously">Previously</string>
    <string name="version">Version</string>
    <string name="share">Share</string>
    <string name="write_note">Write Notes</string>
    <string name="song_key">Song Key</string>
    <string name="beginner">Beginner</string>
    <string name="middle">Middle</string>
    <string name="Master">Master</string>
    <string name="remove_ads">Remove Ads</string>
    <string name="search">Cari</string>
    <string name="recommend_message">Let me recommend you this application </string>
    <string name="loading">Loading…</string>
    <string name="whatsapp_support">WhatsApp Support</string>
    <string name="share_via">Share via</string>
    <string name="note_song">Song Notes</string>
    <string name="my_song_notes">My Song Notes</string>
    <string name="online_song_notes">Online Song Notes</string>
    <string name="add">Add</string>
    <string name="already_promoted">This note has already been promoted. Edit it to promote again!</string>
    <string name="approve">Approve</string>
    <string name="choose_color">Choose Color</string>
    <string name="note_empty">No Notes Yet</string>
    <string name="enter_note">Enter a Note!</string>
    <string name="enter_note_title">Enter a Note Title!</string>
    <string name="play_music_text">Play your favorite musical instrument</string>
    <string name="play_together">Lets learn musical instruments together</string>
    <string name="exit_title">Are you sure you want to exit?</string>
    <string name="mode_32_tuts_audio1">32 Keys Mode Sound 1</string>
    <string name="mode_32_tuts_audio2">32 Keys Mode Sound 2</string>
    <string name="mode_basuri">Basuri Mode</string>
    <string name="mode_8_tuts">8 Keys Mode</string>
    <string name="volume">Volume</string>
    <string name="text_choose_not">Note will show here .... choose it first</string>
    <string name="text_guidelines">Usage Guidelines</string>
    <string name="text_guide_record">Use this feature to record the sound of the musical instrument you are playing</string>
    <string name="text_guide_song">Use this feature to fetch the list of songs on your phone</string>
    <string name="text_guide_list_record">Use this feature to view the list of instrument sound recordings you have recorded</string>
    <string name="text_guide_audio">Use this feature to increase and decrease the volume of the instrument and song</string>
    <string name="text_guide_note">Use this feature to create your own song notes</string>
    <string name="text_guide_color">Use this feature to change the color of the instrument</string>
    <string name="text_guide_note_firebase">Use this feature to view the notes provided by the app</string>
    <string name="text_done">Done</string>
    <string name="text_next">Next</string>
    <string name="text_skip">Skip</string>
    <string name="tooltip_note">This is for saving song notes</string>
    <string name="tooltip_music">This is for selecting the song you want to play</string>
    <string name="tooltip_record">This is for recording when you play</string>
    <string name="tooltip_volume">This is for adjusting the volume</string>
    <string name="tooltip_color">This is for changing the color</string>
    <string name="text_welcome">Hello. Have fun playing :D</string>
    <string name="how_to_add_new_song">How to Add a Song</string>
    <string name="how_add_song1">1. Exit the app</string>
    <string name="how_add_song2">2. Download the song manually using a browser in mp3 format</string>
    <string name="how_add_song3">3. Reopen the app and select the music icon</string>
    <string name="how_add_song4">4. The downloaded song will appear in the playlist</string>
    <string name="how_to_add_note">How to Add a Song Note</string>
    <string name="how_to_add_note1">Click the add icon in the add note dialog</string>
    <string name="how_to_add_note2">Fill in the note title</string>
    <string name="how_to_add_note3">Enter the song notes or the song</string>
    <string name="how_to_add_note4" translatable="false">Click the Save button and it will appear in the note list</string>
    <string name="choose_song">Choose Song</string>
    <string name="tooltip_saved_record">This is to view the recorded result</string>
    <string name="recorded_saved">Recording saved</string>
    <string name="how_to_add_song_title">How to Add Song</string>
    <string name="how_to_add_song_content">To add a song or introductory music, you can search for copyright-free audio through your browser. Once downloaded, the sound will be automatically detected and ready to use in this app.</string>
    <string name="understand">Understand</string>
    <string name="download">Download</string>
    <string name="process_download">Process Download…</string>
    <string name="change_sound">Change Sound</string>
    <string name="select_sound">Select Sound</string>
    <string name="select_audio">Select Audio</string>
    <string name="save_config">Save Config</string>
    <string name="list_audio">List Audio</string>
    <string name="list_sound">List Sound</string>
    <string name="search_sound">Search Sound</string>
    <string name="search_audio">Search Audio</string>
    <string name="search_song">Search Song</string>
    <string name="rating_content">Your rating helps us improve and grow. Would you like to give us some stars?</string>
    <string name="rate">Rate</string>
    <string name="later">Nanti</string>
    <string name="recommend_app">Let me recommend you this application</string>
    <string name="lesson">Lesson</string>
    <string name="tutorial">Tutorial</string>
    <string name="hi">Hi</string>
    <string name="welcome">Welcome</string>
    <string name="ads_not_ready">Ads are not ready yet, please try again shortly.</string>
    <string name="watch_ads">Watch an ad to unlock features</string>
    <string name="reward_get">Reward successfully received!</string>
    <string name="delete_ads">Remove Ads</string>
    <string name="are_you_buy_no_ads">Do you want to permanently remove ads?</string>
    <string name="music_lock">Music 🔒</string>
    <string name="music_unlock">Musik</string>
    <string name="list_music">Music Library</string>
    <string name="audio_mixer">Audio Mixer</string>
    <string name="search_song_accompaniment">Search for accompaniment music...</string>
    <string name="list_record_result">Recording Results List</string>
    <string name="no_data_record">No recordings saved yet</string>
    <string name="list_record_lock">LIST\nREC 🔒</string>
    <string name="list_record_unlock">LIST\nREC</string>
    <string name="change_audio">Change Audio</string>
    <string name="search_audio_type">Search for voice type...</string>
    <string name="active">Active</string>
    <string name="dialog_record_title">RECORDING MODE</string>
    <string name="dialog_record_message">Choose the best way to record your session:</string>
    <string name="btn_instrument_only">INSTRUMENT ONLY</string>
    <string name="desc_instrument_only">Record clean hits without background noise (internal data)</string>
    <string name="btn_mic_instrument">MIC + INSTRUMENT</string>
    <string name="desc_mic_instrument">Record your voice and ambient sound via microphone</string>
    <string name="btn_cancel">CANCEL</string>
    <string name="lbl_new_note_title">New Song Note</string>
</resources>