<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog_wood"
    android:orientation="vertical"
    android:padding="@dimen/_16sdp">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/dialog_record_title"
        android:textColor="#F5D76E"
        android:fontFamily="@font/campton_bold"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:gravity="center"
        android:fontFamily="@font/campton_medium"
        android:text="@string/dialog_record_message"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/_11ssp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_14sdp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/btnInstrumentOnly"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_38sdp"
            android:gravity="center"
            android:background="@drawable/bg_btn_wood"
            android:text="@string/btn_instrument_only"
            android:fontFamily="@font/campton_bold"
            android:textColor="#1F1612"
            android:textSize="@dimen/_11ssp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/desc_instrument_only"
            android:textColor="#BBBBBB"
            android:textSize="@dimen/_9ssp"
            android:layout_marginTop="@dimen/_4sdp"
            android:layout_marginBottom="@dimen/_10sdp" />

        <TextView
            android:id="@+id/btnWithMic"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_38sdp"
            android:gravity="center"
            android:background="@drawable/bg_btn_wood"
            android:text="@string/btn_mic_instrument"
            android:fontFamily="@font/campton_bold"
            android:textColor="#1F1612"
            android:textSize="@dimen/_11ssp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/desc_mic_instrument"
            android:textColor="#BBBBBB"
            android:textSize="@dimen/_9ssp"
            android:layout_marginTop="@dimen/_4sdp"
            android:layout_marginBottom="@dimen/_10sdp" />

        <TextView
            android:id="@+id/btnCancel"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_38sdp"
            android:gravity="center"
            android:background="@drawable/bg_btn_dark"
            android:text="@string/btn_cancel"
            android:fontFamily="@font/campton_bold"
            android:textColor="#AAAAAA"
            android:textSize="@dimen/_11ssp" />

    </LinearLayout>
</LinearLayout>