<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="20dp"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/rimouski"
        android:lineSpacingExtra="8sp"
        android:text="@string/lbl_new_note_title"
        android:textColor="@color/colorAccent"
        android:textSize="25sp"
        android:textStyle="normal" />


    <EditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title"
        android:maxLength="30"
        android:inputType="textCapSentences"
        android:lines="1"
        android:textColorHint="#89c3c3c3"
        android:textSize="20sp"
        tools:ignore="HardcodedText" />

    <EditText
        android:id="@+id/note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:hint="@string/write_note_here"
        android:inputType="textCapSentences|textMultiLine"
        android:lines="4"
        android:textColorHint="#89c3c3c3"
        android:textSize="17sp"
        tools:ignore="HardcodedText" />

</LinearLayout>