<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        tools:ignore="MissingPrefix">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="16dp">

            <ImageView
                android:id="@+id/ic_close"
                android:layout_width="40dp"
                android:layout_height="25dp"
                android:background="@null"
                android:layout_gravity="end"
                app:srcCompat="@drawable/ic_close"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/tv_title"
                android:fontFamily="@font/ooredoo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/help_suggest"/>

            <EditText
                android:id="@+id/etMessage"
                android:background="@drawable/bg_edit_text"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:padding="15dp"
                android:textColor="@color/black_de"
                android:gravity="top"
                android:hint="@string/input_message_here"
                android:layout_gravity="center_horizontal"
                tools:text="" />


            <LinearLayout
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnCancel"
                    android:layout_weight="1"
                    android:fontFamily="@font/ooredoo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAllCaps="false"
                    android:textColor="@color/grayDark"
                    android:text="@string/cancel"
                    />

                <Button
                    android:id="@+id/btnSend"
                    android:layout_weight="1"
                    android:layout_marginStart="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAllCaps="false"
                    android:fontFamily="@font/ooredoo"
                    android:textColor="@color/grayDark"
                    android:text="@string/send"
                    tools:ignore="ButtonStyle" />


            </LinearLayout>


        </LinearLayout>
    </RelativeLayout>
</androidx.cardview.widget.CardView>
