<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/transparant_bg">

    <LinearLayout
        android:layout_gravity="center"
        android:background="@drawable/exit_bg"
        android:gravity="center"
        android:padding="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvDialogTitle"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Notification"
            android:textColor="@color/black_de"
            android:textSize="20sp"
            android:fontFamily="@font/ooredoo" />

        <TextView
            android:id="@+id/tvDialogMessage"
            android:gravity="center"
            android:layout_marginHorizontal="16dp"
            android:layout_width="match_parent"
            android:textColor="@color/black_de"
            android:layout_height="wrap_content"
            android:text="@string/title_recording_dialog"
            android:textSize="16sp"
            android:paddingTop="8dp"/>


        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/btnNo"
                android:src="@drawable/no"
                android:text="@string/no"
                android:textColor="@color/yellow_50"
                android:textStyle="bold"
                android:fontFamily="@font/ooredoo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <ImageView
                android:id="@+id/btnYes"
                android:src="@drawable/yes"
                android:textColor="@color/yellow_50"
                android:text="@string/yes"
                android:textStyle="bold"
                android:fontFamily="@font/ooredoo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
        </LinearLayout>

    </LinearLayout>



</LinearLayout>
