<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_bottom_sheet_dark"
    android:orientation="vertical">

    <!-- Bottom Sheet Handle -->
    <View
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_4sdp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_6sdp"
        android:background="#33FFFFFF" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/_16sdp">

        <ImageView
            android:id="@+id/ivClose"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:padding="@dimen/_4sdp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/app_name"
            app:srcCompat="@drawable/ic_close"
            app:tint="#8888AA"/>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleSmall"
            android:layout_width="@dimen/_18sdp"
            android:layout_height="@dimen/_18sdp"
            android:layout_toStartOf="@+id/ivClose"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/_8sdp"
            android:visibility="gone" />

    </RelativeLayout>

    <!-- TAB STRIP -->
    <LinearLayout
        android:id="@+id/tabStrip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/_16sdp"
        android:paddingBottom="@dimen/_8sdp">

        <TextView
            android:id="@+id/tabLocal"
            android:layout_width="0dp"
            android:layout_height="@dimen/_28sdp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/my_song_notes"
            android:textColor="@color/white"
            android:textSize="@dimen/_10ssp"
            android:textStyle="bold"
            android:background="@drawable/bg_btn_tutorial_learn" />

        <View
            android:layout_width="@dimen/_10sdp"
            android:layout_height="0dp" />

        <TextView
            android:id="@+id/tabOnline"
            android:layout_width="0dp"
            android:layout_height="@dimen/_28sdp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/online_song_notes"
            android:textColor="#8888AA"
            android:textSize="@dimen/_10ssp"
            android:textStyle="bold"
            android:background="@drawable/bg_edittext_game" />
    </LinearLayout>

    <!-- SEARCH BAR -->
    <EditText
        android:id="@+id/etSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:background="@drawable/bg_edittext_game"
        android:hint="@string/enter_note_title"
        android:padding="@dimen/_10sdp"
        android:textColor="@color/white"
        android:textColorHint="#8888AA"
        android:textSize="@dimen/_12ssp"
        android:maxLines="1"
        android:singleLine="true"
        android:inputType="text"
        android:autofillHints="name"
        android:imeOptions="actionSearch" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:paddingBottom="@dimen/_60sdp"
            android:overScrollMode="never" />

        <LinearLayout
            android:id="@+id/empty_notes_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="@string/note_empty"
                android:textColor="#66FFFFFF"
                android:textSize="@dimen/_14ssp" />
        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_16sdp"
            android:layout_gravity="bottom|end"
            android:contentDescription="@string/add"
            app:backgroundTint="@color/colorPrimary"
            app:tint="@android:color/white"
            app:srcCompat="@drawable/baseline_add_24"/>

    </FrameLayout>

</LinearLayout>
