<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        tools:ignore="MissingPrefix">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="16dp">

            <ImageView
                android:id="@+id/ic_close"
                android:layout_width="40dp"
                android:layout_height="25dp"
                android:background="@null"
                android:layout_gravity="end"
                app:srcCompat="@drawable/ic_close"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/tv_title"
                android:fontFamily="@font/rimouski"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/information"/>

            <TextView
                android:id="@+id/tv_message"
                android:fontFamily="@font/rimouski"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                tools:text="Message" />

            <TextView
                android:id="@+id/tv_message2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                tools:text="* Update Lagu" />


            <LinearLayout
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_primary"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAllCaps="false"
                    android:fontFamily="@font/rimouski"
                    android:textColor="@color/white"
                    android:text="@string/update"
                    />

                <Button
                    android:id="@+id/btn_cancel"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/rimouski"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:text="@string/no"
                    />

            </LinearLayout>


        </LinearLayout>
    </RelativeLayout>
</androidx.cardview.widget.CardView>
